// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the Context loaders > loads CallEnv values 1`] = `
{
  "file": Any<Object>,
  "gladdis": {
    "config": "gladdis",
    "freq_penalty": 20,
    "label": "Gladdis",
    "model": "gpt-8",
    "pres_penalty": -20,
    "temperature": 50,
    "top_p_param": 80,
  },
  "user": {
    "data": "CallEnv",
    "env": Any<Object>,
    "history": [
      {
        "content": "Gladdis",
        "role": "system",
      },
    ],
    "label": "CallEnv",
    "prompt": "",
  },
  "whisper": {
    "config": "whisper",
    "deleteFile": false,
    "echoOutput": false,
    "input": "Whisper",
    "language": "es",
    "liveSuffix": "Whisper",
    "model": "whisper-4",
    "readSuffix": "Gladdis",
    "temperature": 50,
  },
}
`;

exports[`the Context loaders > loads EnvVars values 1`] = `
{
  "file": {
    "date": Any<Date>,
    "disk": Any<Object>,
    "name": "name",
    "path": "name.md",
    "text": "text",
  },
  "gladdis": {
    "config": undefined,
    "freq_penalty": 10,
    "label": "EnvVars",
    "model": "gpt-4",
    "pres_penalty": -10,
    "temperature": 10,
    "top_p_param": 90,
  },
  "user": {
    "data": "EnvVars",
    "env": Any<Object>,
    "history": [],
    "label": "Myself",
    "prompt": "text",
  },
  "whisper": {
    "config": undefined,
    "deleteFile": true,
    "echoOutput": false,
    "input": "EnvVars",
    "language": "en",
    "liveSuffix": "EnvVars",
    "model": "whisper-2",
    "readSuffix": "EnvVars",
    "temperature": 10,
  },
}
`;

exports[`the Context loaders > loads any extra values 1`] = `
{
  "extra1": "CallEnv",
  "extra3": "Gladdis",
  "extra4": "InputFM",
  "file": Any<Object>,
  "gladdis": {
    "config": "gladdis",
    "freq_penalty": 25,
    "label": "Gladdis",
    "model": "gpt-8",
    "pres_penalty": -25,
    "temperature": 50,
    "top_p_param": 80,
  },
  "user": Any<Object>,
  "whisper": {
    "config": "whisper",
    "deleteFile": false,
    "echoOutput": false,
    "input": "Extras",
    "language": "de",
    "liveSuffix": "Whisper",
    "model": "whisper-4",
    "readSuffix": "Gladdis",
    "temperature": 50,
  },
}
`;

exports[`the Context loaders > loads configs values 1`] = `
{
  "file": Any<Object>,
  "gladdis": {
    "config": "gladdis",
    "freq_penalty": 20,
    "label": "Gladdis",
    "model": "gpt-5",
    "pres_penalty": -20,
    "temperature": 20,
    "top_p_param": 80,
  },
  "user": {
    "data": "EnvVars",
    "env": Any<Object>,
    "history": [],
    "label": "Myself",
    "prompt": "prompt",
  },
  "whisper": {
    "config": "whisper",
    "deleteFile": false,
    "echoOutput": false,
    "input": "Whisper",
    "language": "fr",
    "liveSuffix": "Whisper",
    "model": "whisper-3",
    "readSuffix": "Gladdis",
    "temperature": 30,
  },
}
`;

exports[`the Context loaders > loads default values 1`] = `
{
  "file": {
    "date": Any<Date>,
    "disk": Any<Object>,
    "name": "name",
    "path": "name.md",
    "text": "",
  },
  "gladdis": {
    "config": undefined,
    "freq_penalty": 0,
    "label": "Gladdis",
    "model": "gpt-3.5-turbo",
    "pres_penalty": 0,
    "temperature": 0,
    "top_p_param": 100,
  },
  "user": {
    "data": "__DATA__",
    "env": {
      "NODE_ENV": "test",
    },
    "history": [],
    "label": "User",
    "prompt": "",
  },
  "whisper": {
    "config": undefined,
    "deleteFile": false,
    "echoOutput": true,
    "input": "Gladdis",
    "language": undefined,
    "liveSuffix": "dictated, but not read",
    "model": "whisper-1",
    "readSuffix": "transcribed and read",
    "temperature": 0,
  },
}
`;

exports[`the Context loaders > loads input file values 1`] = `
{
  "file": Any<Object>,
  "gladdis": {
    "config": "gladdis",
    "freq_penalty": 20,
    "label": "Gladdis",
    "model": "gpt-7",
    "pres_penalty": -20,
    "temperature": 40,
    "top_p_param": 80,
  },
  "user": Any<Object>,
  "whisper": {
    "config": "whisper",
    "deleteFile": false,
    "echoOutput": false,
    "input": "Whisper",
    "language": "fr",
    "liveSuffix": "Whisper",
    "model": "whisper-4",
    "readSuffix": "Gladdis",
    "temperature": 40,
  },
}
`;
